test/visibility/private/uses/publicNoBleedFunc.good
publicNoBleedFunc.chpl:14: In function 'main':
publicNoBleedFunc.chpl:17: error: unresolved call 'b()'
